Spacing fix for create account in EL & DE
LANG #254
See: https://trello.com/c/ziEWVNdR

--- a/frontend/app/less/util-pages.less
+++ b/frontend/app/less/util-pages.less
@@ -2,11 +2,11 @@
 
 .mainContainer .short-input-section .short-input-container.login,
 .mainContainer .short-input-section .short-input-container.recovery-container {
-  
+
   .big-input {
     width: 282px;
   }
-  
+
   .button {
     width: 272px;
   }
@@ -22,7 +22,7 @@
   width: 640px;
 
   .short-input-container-body-wrapper .short-input-container-body .position {
-    
+
     .big-input {
       display: inline-block;
       float: left;
@@ -31,7 +31,7 @@
       padding-top: 10px;
       width: 320px;
     }
-    
+
     .button {
       display: inline-block;
       width: 116px;
@@ -87,6 +87,11 @@
       width: 360px;
     }
 
+    .big-input-description {
+        text-align: left;
+        width: 384px;
+    }
+
     .med-input {
       padding: 10px;
       width: 160px;
@@ -115,7 +120,7 @@
       margin-top: 20px;
       padding-left: 0px;
       padding-right: 0px;
-      
+
       .button {
         display: inline-block;
         width: 200px;
